# dtu_mlops

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  Gemfile  How autodiff changed the world.pptx  Makefile  PR_TEST_NOTE.txt  README.md  Test  _config.yml  challenges.md  config.json  config.mdlrc  cong_file.txt  data.dvc  data.py  faq.md  git_commands.txt  improvement.txt  index.html  locations.txt  logo.pptx  main.py  mkdocs.yml  mlc_config.json  model.pth  nomistakes.txt  overview.md  profile_stats.prof  projects.md  pyproject.toml  requirements.txt  requirements_exercises.txt  restats  sitemap.xml  tasks.py  template.pptx  template.tex  test.txt  (+4 more)
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/: .markdownlint.json  copilot-instructions.md  dependabot.yaml  linkcheck_config.json  markdownlint.json
01_introduction/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb  How_autodiff_changed_the_world.pptx  checkpoint.pth  fc_model.py  helper.py  readme.md
02_code_organisation/: MLOps.pptx  readme.md
03_debuggin_and_visualization/: Debugging.pptx  Visualizations.pptx  readme.md  vae_mnist_bugs.py  vae_mnist_pytorch_profiler.py  vae_mnist_working.py
04_continues_integration/: ci.pptx  readme.md
05_project_overview/: The_pytorch_ecosystem.pptx  readme.md
06_training_in_the_sky/: enviroments.py  readme.md
07_distributed_training/: DistributedTraining.pptx  fashion_trainer.py  lfw_dataset.py  readme.md
08_deployment/: deployment.pptx  readme.md
08_reproduceability/: Reproduceability.pptx  readme.md  reproduceability_tester.py  vae_mnist.py
08_reproducibility/: Reproducibility.pptx  readme.md  vae_mnist.py
09_crossvalidation_at_scale/: Hyperparameters.pptx  cross_validate.py  fashion_trainer.py  parallel_lancher.py  readme.md
10_deployment/: deployment.pptx  readme.md
10_privasy_computing/: readme.md
10_reproducibility/: readme.md
11_deployment/: readme.md
1_introduction/: 1_Tensors_in_PyTorch.ipynb  How autodiff changed the world.pptx  How_autodiff_changed_the_world.pptx  Part 2 - Neural Networks in PyTorch (Exercises).ipynb  readme.md
2_code_organisation/: MLOps.pptx  readme.md
3_debuggin_and_visualization/: readme.md  vae_mnist_working.py
4_pytorch_ecosystem/: readme.md
5_project_overview/: readme.md
7_distributed_training/: lfw_dataset.py  readme.md
8_reproduceability/: Reproduceability.pptx  readme.md  reproduceability_tester.py  vae_mnist.py
9_crossvalidation_at_scale/: cross_validate.py  readme.md
_includes/: head_custom.html
_sass/: layout.scss
challenges/: index.html
corrupt_MNIST/: data.py  model.pth
day10/: day10.md
day1_getting_started/: M3_pytorch.md  day1.md  m4_editor
day2_organisation/: day2.md
day3/: day3.md
day4_continues_x/: day4.md
day5/: day5.md
day6/: day6.md
day7/: day7.md
day9/: day9.md
docs/: challenges.md  index.md  mkdocs.yml  projects.md  timeplan.md
extra/: extra.md  fashion_trainer.py  overview.md
faq/: index.html
figures/: refs.txt
overview/: index.html
pages/: before.md  faq.md  overview.md  projects.md  timeplan.md
projects/: The_pytorch_ecosystem.pptx  challenges.md  index.html  projects.md  timeplan.md
repo_sven_day_2/: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
repo_sven_day_2/.github/workflows/: tests.yaml
repo_sven_day_2/dockerfiles/: api.dockerfile  train.dockerfile
repo_sven_day_2/docs/: README.md  mkdocs.yaml
repo_sven_day_2/docs/source/: index.md
repo_sven_day_2/src/project_sven_day_2/: data.py
repo_sven_day_2/tests/: test_data.py
reports/: README.md  index.html  report.py
s0_data_preparation/: README.md  data_annotation.md  data_augmentation.md  data_cleaning.md  database.md  dataset_curation.md
s10_extra/: HPC.md  M20_hyperparameters.md  M21_pre_commit.md  M27_hyperparameters.md  M27_pre_commit.md  M28_hyperparameters.md  M29_apis.md  M29_cli.md  M30_design.md  M30_hyperparameters.md  M30_onnx.md  M31_HPC.md  M31_hyperparameters.md  M32_apis.md  M32_challenges.md  M33_onnx.md  M34_HPC.md  M35_challeng.md  M35_challenges.md  M36_kubernetes.md  M_HPC.md  M___fastapi.md  M_apis.md  M_challeng.md  M_cli.md  M_design.md  M_frontend.md  M_hyperparameters.md  M_kubernetes.md  M_onnx.md  M_pipeline.md  README.md  S10.md  calibration.md  challenges.md  cli.md  design.md  documentation.md  frontend.md  high_performance_clusters.md  (+9 more)
s10_optional/: S10.md  readme.md
s10_scalable_applications/: distributed_training.md
s11_extra/: cli.md  design.md  hyperparameters.md  pipeline.md
s1_development_environment/: M1_terminal.md  M2_conda.md  M3_editor.md  M4_deep_learning_software.md  README.md  S1.md  command_line.md  conda.md  deep_learning_software.md  editor.md  index.html  package_manager.md  terminal.md
s1_getting_started/: How_autodiff_changed_the_world.pptx  M1_terminal.md  M2_conda.md  M3_editor.md  M3_pytorch.md  M4_editor.md  M4_pytorch.md  S1.md  cool_text.txt
s2_organisation/: M5_git.md  M6_docker.md  M7_code_structure.md  M8_good_coding_practice.md  M8_good_coding_practises.md  S2.md  day2.md
s2_organisation_and_version_control/: M5_git.md  M6_code_structure.md  M7_good_coding_practice.md  M8_dvc.md  README.md  S2.md  TEST.txt  cli.md  code_structure.md  dvc.md  git.md  good_coding_practice.md  index.html
s3_debugging_and_logging/: M10_profiling.md  M11_logging.md  M9_debugging.md  S3.md  day3.md
s3_reproduceability/: M10_config_files.md  M9_docker.md  S3.md
s3_reproducibility/: M10_config_files.md  M9_docker.md  README.md  S3.md  config_files.md  docker.md  index.html
s4_continues_x/: M12_continues_integration.md  M13_continues_machine_learning.md  S4.md  ci.pptx
s4_debugging_and_logging/: M10_debugging.md  M11_debugging.md  M11_profiling.md  M12_logging.md  M12_profiling.md  M13_logging.md  M14_boilerplate.md  README.md  S4.md  boilerplate.md  debugging.md  index.html  logging.md  profiling.md
tools/: README.md  (+5 more)
(+610 files in other folders)
