[project]
name = "dtu-mlops"
version = "0.1.0"
description = "DTU MLOps course"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "codespell==2.4.1",
  "invoke==2.2",
  "ipython==9.0.2",
  "markdown-exec[ansi]==1.10",
  "mkdocs-exclude==1.0.2",
  "mkdocs-git-revision-date-localized-plugin==1.4.5",
  "mkdocs-glightbox==0.4",
  "mkdocs-material==9.6.12",
  "mkdocs-material-extensions==1.3.1",
  "mkdocs-same-dir==0.1.3",
  "pre-commit==4.1",
  "pymdown-extensions==10.14.3",
  "ruff==0.12.10",
]

[tool.ruff]
target-version = "py311"

line-length = 120
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "I",
  "ICN",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PGH",
  "PIE",
  "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "B008",
  "B028",
  "B905",
  "COM812",
  "D100",
  "D107",
  "D211",
  "D212",
  "F821",
  "F841",
  "ISC001",
  "S301",
  "S311",
  "S603",
  "S605",
  "S607",
  "TC003",
]
lint.exclude = [ "student_repos/" ]
lint.pydocstyle.convention = "google"

[tool.codespell]
skip = "*.pdf,*.ipynb,*.drawio,*.json"
ignore-words-list = [ "instanciate" ]

[tool.typos.default.extend-identifiers]
arange = "arange"

[tool.typos.default.extend-words]
Ue = "Ue"
Hashi = "Hashi"
