[project]
name = "dtu-mlops"
version = "0.1.0"
description = "DTU MLOps course"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "codespell>=2.4.1",
  "invoke>=2.2",
  "ipython>=9.0.2",
  "markdown-exec[ansi]>=1.10",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-git-revision-date-localized-plugin>=1.4.5",
  "mkdocs-glightbox>=0.4",
  "mkdocs-material>=9.7",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-same-dir>=0.1.3",
  "pre-commit>=4.1",
  "pymdown-extensions>=10.14.3",
  "ruff>=0.14.5",
]

[dependency-groups]
exercises = [
  "cookiecutter>=2.6",
  "coverage>=7.11.3",
  "datasets>=4.4.1",
  "dvc>=3.64",
  "dvc-gdrive>=3.0.1",
  "dvc-gs>=3.0.2",
  "evidently>=0.7.16",
  "fastapi>=0.121.2",
  "google-cloud-storage>=3.6",
  "httpx>=0.28.1",
  "hydra-core>=1.3.2",
  "invoke>=2.2",
  "ipykernel>=7.1.0",
  "locust>=2.42.3",
  "matplotlib>=3.10.8",
  "mkdocs-material>=9.7",
  "mypy>=1.18.2",
  "nbconvert>=7.16.6",
  "neural-compressor>=3.6",
  "onnxruntime>=1.23.2",
  "optuna>=4.6",
  "pipreqs>=0.4.13",
  "pre-commit>=4.1",
  "prefect>=3.5",
  "prometheus-fastapi-instrumentator>=7.1",
  "ptflops>=0.7.5",
  "pydantic>=2.11.10",
  "pytest>=8.4.2",
  "python-dotenv>=1.2.1",
  "pytorch-lightning>=2.5.6",
  "requests>=2.32.3",
  "ruff>=0.14.5",
  "scikit-learn>=1.7.2",
  "snakeviz>=2.2.2",
  "streamlit>=1.51",
  "torch>=2.9.1",
  "torch-tb-profiler>=0.4.3",
  "torchvision>=0.24.1",
  "transformers>=4.57.1",
  "typer>=0.19.2",
  "uvicorn>=0.38",
  "wandb>=0.23",
]

[tool.ruff]
target-version = "py311"

line-length = 120
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "I",
  "ICN",
  "INT",
  "ISC",
  "LOG",
  "N",
  "PGH",
  "PIE",
  "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "B008",
  "B028",
  "B905",
  "COM812",
  "D100",
  "D107",
  "D211",
  "D212",
  "F821",
  "F841",
  "ISC001",
  "S301",
  "S311",
  "S603",
  "S605",
  "S607",
  "TC003",
]
lint.exclude = [ "student_repos/" ]
lint.pydocstyle.convention = "google"

[tool.codespell]
skip = "*.pdf,*.ipynb,*.drawio,*.json"
ignore-words-list = [ "instanciate" ]

[tool.typos.default.extend-identifiers]
arange = "arange"

[tool.typos.default.extend-words]
Ue = "Ue"
Hashi = "Hashi"
